@@ -1,5 +1,6 @@
 2022-XX-XX   2.5.1:
 -------------------
+  * optimize `.reverse()` (about 10x speedup for large bitarrays), see #177
 
 
 2022-05-04   2.5.0:
